# Immigration-Navigator

./: .env.template  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: main.py
app/agents/: checklist_agent.py  document_agent.py  rag_agent.py  supervisor.py
app/api/routes/: chat.py  health.py
app/core/: config.py
app/db/: database.py
app/db/models/: __init__.py  conversation.py
app/graph/: state.py  workflow.py
app/rag/: ingestion.py  retriever.py  sources.py
app/schemas/: chat.py
data/raw_html/: Immigration_rules_for_full_time_non_EEA_students.html  Moving_to_Ireland_for_third_level_education.html  Residence_rights_of_EU_citizens_and_their_families_in_Ireland.html  citizenship_birth_descent.html  critical_skills_permit.html  family_reunion.html  general_employment_permit.html  inis_registration.html  inis_situation_changed.html  inis_study.html  inis_work_options.html  naturalisation.html  residence_permission.html  student_visa.html  visa_requirements.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatTab.jsx  ChecklistTab.jsx  DocumentTab.jsx  MessageBubble.jsx  TypingIndicator.jsx
scripts/: ingest.py  test_graph.py  test_rag.py
tests/: README.md
tests/unit/: test_schemas.py
